syntax = "proto3";

option csharp_namespace = "Books";

package books;

service Books {
  rpc GetBooks (GetBooksRequest) returns (GetBooksResponse);
  rpc GetBookById (GetBookByIdRequest) returns (GetBookByIdResponse);
  rpc CreateBook (CreateBookRequest) returns (CreateBookResponse);
  rpc UpdateBook (UpdateBookRequest) returns (UpdateBookResponse);
  rpc DeleteBook (DeleteBookRequest) returns (DeleteBookResponse);
}

message BookModel{
  int32 id = 1;
  string title = 2;
  string author =3;
  int32 year = 4;
  string country = 5;
  string language = 6;
  string imagelink = 7;
  int32 stock = 8;
}

message GetBooksRequest{}

message GetBooksResponse {
  repeated  BookModel books = 1;
}

message CreateBookRequest {
  string title = 2;
  string author =3;
  int32 year = 4;
  string country = 5;
  string language = 6;
  string imagelink = 7;
  int32 stock = 8;
}

message GetBookByIdRequest {
  int32 id = 1;
}

message GetBookByIdResponse {
  BookModel book = 1;
}

message CreateBookResponse {
  BookModel book = 1;
}

message UpdateBookRequest {
  int32 id = 1;
  string title = 2;
  int32 stock = 3;
}


message UpdateBookResponse {
  BookModel book = 1;
}

message DeleteBookRequest {
  int32 id = 1;
}

message DeleteBookResponse {
  bool deleted = 1;
  string message = 2;
}