syntax = "proto3";

option csharp_namespace = "Authors";

package authorsGRPC;

service Author {
  rpc GetAuthors (GetAuthorsRequest) returns (GetAuthorsResponse);
  rpc GetAuthorById (GetAuthorByIdRequest) returns (GetAuthorByIdResponse);
  rpc GetAuthorByName (GetAuthorByNameRequest) returns (GetAuthorByNameResponse);
  rpc CreateAuthor (CreateAuthorRequest) returns (CreateAuthorResponse);
  rpc UpdateAuthor (UpdateAuthorRequest) returns (UpdateAuthorResponse);
  rpc DeleteAuthor (DeleteAuthorRequest) returns (DeleteAuthorResponse);
}

message AuthorPageInfo {
  int32 page = 1;
  int32 page_size = 2;
  int32 skip = 3;
  int32 total = 4;
}

message AuthorDTO {
  int32 id = 1;
  string name = 2;
}

message GetAuthorsRequest {
  AuthorPageInfo page_info = 1;
}

message GetAuthorsResponse {
  repeated AuthorDTO data = 1;
  AuthorPageInfo page_info = 2;
}

message GetAuthorByIdRequest {
  int32 id = 1;
}

message GetAuthorByIdResponse {
  AuthorDTO author = 1;
}

message CreateAuthorRequest {
  string name = 1;
}

message CreateAuthorResponse {
  int32 id = 1;
  string name = 2;
}

message UpdateAuthorRequest {
  int32  id = 1;
  string name = 2;
}

message UpdateAuthorResponse {
  AuthorDTO author = 1;
}

message DeleteAuthorRequest {
  int32 id = 1;
}

message DeleteAuthorResponse {
  bool  deleted = 1;
  string message = 2;
}